# imu_sensor_fusion

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
include/: ComplementaryFilter.h  ExtendedKF.h  FilterBase.h  IMU.h  LowPassFilter.h  MadgwickFilter.h  MahonyFilter.h  NoFilter.h  Types.h
python_visualizer/: EKF_derivation.asv  EKF_derivation.m  imu_data_2025-09-06.txt  imu_fft_analysis.m  madgwick_formulation.m  over_udp.py  record_data.py  visualize_imu.py  wifi_data.py
src/: main.cpp
src/imu/: i2c_reader.cpp  i2c_reader.hpp  imu_data.hpp  imu_reader.cpp  imu_reader.hpp
src/lib/Filters/: ComplementaryFilter.cpp  ExtendedKF.cpp  LowPassFilter.cpp  MadgwickFilter.cpp  MahonyFilter.cpp  NoFilter.cpp
src/lib/IMU/: IMU.cpp
